--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -60,6 +60,7 @@
 
   .btn-get-in-touch:hover {
     background: var(--color-gold-hover);
+    border: 2px solid var(--color-teal);
     transform: scale(1.02);
   }
 
