--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ import '../styles/global.css';
     <title>Pixelary | Innovation, Growth, Success</title>
     <meta
       name="description"
-      content="Pixelary - We hand-code lightning-fast sites specifically engineered to convert passive visitors into active callers."
+      content="Pixelary - We build lightning-fast websites engineered to convert passive visitors into active leads."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +17,7 @@ import '../styles/global.css';
       href="https://fonts.googleapis.com/css2?family=Allura&family=Libre+Baskerville:wght@400;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500&family=Roboto+Condensed:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/png" href="/logo-color.png" />
+    <link rel="icon" type="image/png" href="/pixelary-favicon.png" />
   </head>
 
   <body>
