additional change to meta descr

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ import '../styles/global.css';
     <title>Pixelary | Innovation, Growth, Success</title>
     <meta
       name="description"
-      content="Pixelary - We build lightning-fast websites engineered to convert passive visitors into active leads."
+      content="Pixelary - We build lightning-fast websites optimized for local search & turning passive traffic into qualified leads."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
