--- a/src/components/Scene2Services.astro
+++ b/src/components/Scene2Services.astro
@@ -17,7 +17,14 @@
           <div class="accent-rect accent-rect-3"></div>
         </div>
         <div class="icon-wrapper">
-          <img src="/desktop-icon.png" alt="Web Design" class="service-icon" />
+          <img
+            src="/desktop-icon.webp"
+            alt="Web Design"
+            class="service-icon"
+            width="60"
+            height="60"
+            loading="lazy"
+          />
         </div>
       </div>
       <div class="card-content" id="diamond-content-1">
@@ -39,9 +46,12 @@
         </div>
         <div class="icon-wrapper">
           <img
-            src="/pin-icon.png"
+            src="/pin-icon.webp"
             alt="Intelligent Capture"
             class="service-icon"
+            width="60"
+            height="60"
+            loading="lazy"
           />
         </div>
       </div>
@@ -64,9 +74,12 @@
         </div>
         <div class="icon-wrapper">
           <img
-            src="/funnel-icon.png"
+            src="/funnel-icon.webp"
             alt="Client Retention"
             class="service-icon"
+            width="60"
+            height="60"
+            loading="lazy"
           />
         </div>
       </div>
