--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,12 +5,14 @@
 <header class="header" id="header">
   <div class="header-inner">
     <img
-      src="/logo-color.png"
+      src="/logo-color.webp"
       alt="Pixelary"
       class="header-logo"
       id="header-logo"
+      width="200"
+      height="60"
     />
-    <button class="btn-get-in-touch">Get in Touch</button>
+    <button class="btn-get-in-touch" id="btn-get-in-touch">Get in Touch</button>
   </div>
 </header>
 
