more lighthouse fixes + contact form

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,7 +19,7 @@
 
 <style is:global>
   .footer {
-    background-color: var(--color-teal);
+    background-color: var(--color-teal-dark);
     padding: 60px 24px;
     text-align: center;
   }
