--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,7 @@
 :root {
   --color-slate: #2a3f52;
   --color-teal: #0097a7;
+  --color-teal-dark: #007b8a;
   --color-gold: #f5ad19;
   --color-light-gold: #f5cc7c;
   --color-gold-hover: #d4941c;
