--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -26,6 +26,7 @@ import '../styles/global.css';
       />
     </noscript>
     <link rel="icon" type="image/png" href="/pixelary-favicon.png" />
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="0ba3c543-7113-45d6-8eed-a4801ed06efd"></script>
   </head>
 
   <body>
